# coconut-src

./: .gitignore
armasm/: CMakeLists.txt  CMakePresets.json  README.md  index.md  references.md
binexploit/: index.md  references.md
compilation/: CMakeLists.txt  README.md  fs.c  fs.h  main.c  mask.c  mask.h  matrix.c  matrix.h  terminal.c  terminal.h  utf8.c  utf8.h  utf8_test.c
compilation/sprites/: anonymous.txt  its_over.txt  pepe.txt  pepe2.txt  pepe3.txt  shrek.txt  skull.txt  sweedle.txt  yes.txt
concurrency/: references.md
containers/: README.md  index.md  references.md
encodings/: CMakeLists.txt  CMakePresets.json  README.md
epoll/: CMakeLists.txt  CMakePresets.json  README.md  index.md  references.md
filesystems/: CMakeLists.txt  CMakePresets.json  README.md  index.md  references.md
intro/: .clang-format  Makefile  (+7 more)
ipc/: CMakeLists.txt  CMakePresets.json  README.md  index.md  references.md
ipc/cat/: CMakeLists.txt  main.c
ipc/counter/: CMakeLists.txt  Makefile  main.c
ipc/eintr/: Makefile  eintr.c
ipc/epoll/: main.c
ipc/neverint/: main.c
ipc/nohup/: CMakeLists.txt  Makefile  nohup.c  noterm.c  pause.c
ipc/pipe/: CMakeLists.txt  Makefile  faulty.c  loop.c  main.c  pingme.c  pipe.c  produce.sh
ipc/recover/: CMakeLists.txt  Makefile  main.c
ipc/redirect/: CMakeLists.txt  redirect.c
multithreading/: CMakeLists.txt  CMakePresets.json  README.md  index.md
multithreading/counter/: atomic.c  faulty.c  rmw.c
multithreading/list/: CMakeLists.txt  list.c  spinlocked.c
multithreading/queue/: cond.c  spin.c
multithreading/rw/: CMakeLists.txt  faulty.c  faulty.cpp
multithreading/stack/: CMakeLists.txt  main.c
net/: CMakeLists.txt  CMakePresets.json  README.md  index.md  references.md
net/epoll/: CMakeLists.txt  server.c
net/tcp/: CMakeLists.txt  client.c  server.c
net/udp/: CMakeLists.txt  client.c  server.c
processes/: CMakeLists.txt  CMakePresets.json  README.md  cat  index.md  references.md  shebang.sh
processes/bomb/: CMakeLists.txt  main.c
processes/checksum/: CMakeLists.txt  main.c
processes/elf/: CMakeLists.txt  exe.c  extern.c  global.c  shared.c
processes/sh/: CMakeLists.txt  main.c
virtmem/: CMakeLists.txt  CMakePresets.json  REDAME.md  index.md  references.md
virtmem/alloc/: CMakeLists.txt  Makefile  main.c
virtmem/fsort/: CMakeLists.txt  Makefile  main.c
virtmem/matmul/: CMakeLists.txt  Makefile  linear.cpp  rect.cpp
virtmem/privateaddr/: Makefile  scanprint.c
virtmem/readself/: Makefile  foo.c
x86asm/: CMakeLists.txt  CMakePresets.json  README.md  index.md  references.md
x86asm/aplusb/: Makefile  aplusb.S  aplusb.c  main.c
x86asm/caesar/: Makefile  caesar.S  caesar.h  main.c
x86asm/echo/: CMakeLists.txt  echo.S  echo.h  main.c
x86asm/fibonacci/: CMakeLists.txt  Makefile  main.c  mfib.S  rfib.S
x86asm/hello_world/: main
x86asm/linalg/: CMakeLists.txt  Makefile  add.S  add.h  main.c
x86asm/printf/: Makefile  main.c  printf.S  printf.h
x86asm/sqrt/: CMakeLists.txt  main.c  sqrt.S  sqrt.h
x86asm/syscall/: CMakeLists.txt  Makefile  main.c  syscall.S  syscall.h
(+128 files in other folders)
